# computer-graphics

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
computer_graphics/: __init__.py  advanced_material_scene.py  advanced_moving_scene.py  base.py  cgsolid.py  colour_vertex_scene.py  dodecahedron_moving_scene.py  hello.py  index_vertex_scene.py  lab2_scene.py  light_scene.py  material.py  material_scene.py  moving_scene.py  particle_system.py  polyhedron.py  revolution.py  simple_vertex_scene.py  solid.py  test_polyhedron.py  test_revolution.py  test_solid.py  texture_scene.py
polyhedron/: polyhedron.py
src/: App.js  App.tsx  cube.js  draw.js  tetrahedron.js
src/figures/: tetrahedron.ts
src/graph/: graph.ts
src/low-level/: buffers.js  shaders.js
src/polyhedron/: graph.test.ts  graph.ts  polyhedron.ts  tree.test.ts  tree.ts
src/revolution/: revolution.test.ts  revolution.ts
src/scenes/cone-scene/: attributes.js  buffers.js  cone.ts  coneScene.tsx  shader.js
src/scenes/cube-scene/: attributes.js  buffers.js  cube.ts  cubeScene.tsx  shader.js
src/scenes/dodecahedron-scene/: attributes.js  buffers.js  dodecahedron.ts  dodecahedronScene.tsx  shader.js
src/scenes/lab1-scene/: attributes.js  buffers.js  cone.ts  cube.ts  dodecahedron.ts  draw.ts  scene1.tsx  scene2.tsx  shader.js  torus.ts
src/scenes/lab11-scene/: cube.ts  dodecahedron.ts  draw.ts  scene.tsx  scene1.tsx  shader.js
src/scenes/rotating-cube-scene/: attributes.js  (+4 more)
src/webgl/: attributes.js  buffers.js  program.js  shader.js  tetrahedron.js  tetrahedron.ts
(+10 files in other folders)
